--- a/css/main.css
+++ b/css/main.css
@@ -1,19 +1,32 @@
+:root {
+  --base: #f38799;
+  --spacing: 10px;
+  --blur: 10px;
+}
+
 .body {
   background-image: url('../images/background.jpg');
   background-repeat: no-repeat;
   background-position: center center;
   background-size: cover;
+}
+.main {
+  padding-top: 2.7%;
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  font-size: 25px;
+}
+.title {
+  padding-bottom: 3%;
+  font-size: 40px;
 }
 .commands_section {
   display: flex;
   justify-content: center;
   align-items: center;
   gap: 25px;
+  font-size: 30px;
 }
 
 .picture_section {
@@ -24,10 +37,16 @@
 .img_wrapper {
   width: 55%;
   margin-top: 2.5%;
-  padding: 2%;
   background-color: #ffc0cb;
 }
 .img {
   width: 100%;
   height: 100%;
+  padding: var(--spacing);
+  background-color: var(--base);
+  filter: blur(var(--blur));
+}
+
+.hl {
+  color: var(--base);
 }
